Fix: Margin for button collection was too high

--- a/css/buttons.dataTables.scss
+++ b/css/buttons.dataTables.scss
@@ -81,7 +81,7 @@ div.dt-button-collection {
 	top: 0;
 	left: 0;
 	width: 150px;
-	margin-top: 15px;
+	margin-top: 3px;
 	padding: 8px 8px 4px 8px;
 	border: 1px solid #ccc;
 	border: 1px solid rgba( 0, 0, 0, 0.4 );
